tests/NormalTests/paczka2/big_fuzzy/79097617.err
Error in line 2: AODDZ6kBPPU S262 25,3
Error in line 4: AODDZ6kBPPU S734 58,9
Error in line 5: AODDZ6kBPPU A712 96,8
Error in line 9: S734 A712 56,5
Error in line 6: AODDZ6kBPPU S227 77,0
Error in line 21: uvE2SZLni S262 64,18
Error in line 23: S734 S734 72,9
Error in line 26: S734 S227 80,3
Error in line 22: AODDZ6kBPPU A712 33,6
Error in line 48: 3ujf2 S734 35,5
Error in line 27: 0OyapR2S618 A712 39,2
Error in line 49: S734 A712 36,0
Error in line 67: S734 S262 -2,2
Error in line 57: AODDZ6kBPPU S734 53,1
Error in line 82: oVw4EÿDH S734 5,4
Error in line 84: 3ujf2 S734 72,8
Error in line 65: 7pnL A712 201,4
Error in line 93: AODDZ6kBPPU S262 6,2
Error in line 107: 3ujf2 A712 73,1
Error in line 81: oVw4EcDH S734 11,2
Error in line 122: uvE2SZLni S262 80,6
Error in line 130: uvE2SZLni S227 5,7
Error in line 131: uvE2SZLni S734 23,7
Error in line 129: 7pnL S227 10,6
Error in line 174: S734 S734 101,6
Error in line 181: 0OyapR2S 18 A712 2 ,8
Error in line 177: 3ujf2 S227 64,9
Error in line 188: uvE2SZLni A712 84,0
Error in line 199: S734 S262 6,7
Error in line 214: S734 S262 134,26
Error in line 212: S734 S262 77,8
Error in line 224: S734 S734 77,7
Error in line 213: 3ujf2 A712 6,2
Error in line 226: S734 A712 26,5
Error in line 232: 0OyapR2S618 S262 32,3
Error in line 230: oVw4EcDH S227 163,2
Error in line 234: S734 S262 84,2
Error in line 239: oVw4EcDH S262 56,9
Error in line 246: oVw4EcDH S734 3t,6
